Thu May 29 03:38:26 GMT 2014  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Put ``...`` around Xapian C++ class names.

Thu May 29 03:36:55 GMT 2014  Olly Betts <olly@survex.com>

	* docs/omegascript.rst,query.cc: Add optional LENGTH parameter to
	  $snippet.

Thu May 29 02:41:08 GMT 2014  Olly Betts <olly@survex.com>

	* diritor.cc: libmagic can return a second string starting "Composite
	  Document File V2 Document" for the mime-type, so just look for that
	  prefix.  And newer libmagic returns "application/CDFV2-corrupt" in
	  these cases, so handle that too.

Wed May 28 05:22:12 GMT 2014  Olly Betts <olly@survex.com>

	* omindex-list.cc: Remove debug output.

Wed May 28 05:15:50 GMT 2014  Olly Betts <olly@survex.com>

	* Makefile.am,omindex-list.cc: New tool to list URLs of all the
	  documents in a database (or list of databases) indexed by omindex.

Tue May 27 04:12:07 GMT 2014  Olly Betts <olly@survex.com>

	* docs/omegascript.rst: Document $snippet.

Tue May 27 04:07:43 GMT 2014  Mihai Bivol <mm.bivol@gmail.com>

	* query.cc,templates/query: Add Omega Snipper integration.

Fri May 23 12:05:52 GMT 2014  Olly Betts <olly@survex.com>

	* date.cc,scriptindex.cc: Pass std::string by const reference.

Fri May 23 09:05:25 GMT 2014  Olly Betts <olly@survex.com>

	* query.cc: Removed unused inline function.

Tue May 20 23:27:37 GMT 2014  Olly Betts <olly@survex.com>

	* omindex.cc: Update comment about unrtf --nopict to note the unrtf
	  version where this was fixed to work again.

Tue May 20 23:26:19 GMT 2014  Olly Betts <olly@survex.com>

	* omindex.cc: Report the size limit in the message when we skip a file
	  which exceeds it.

Mon Apr 14 10:42:06 GMT 2014  Olly Betts <olly@survex.com>

	* omindex.cc: Filtering via text/html now handles HTML documents which
	  specify a charset.  "application/vnd.ms-outlook" is now handled by
	  filtering via text/html rather than as a hard-coded special case.

Thu Apr 10 03:47:18 GMT 2014  Olly Betts <olly@survex.com>