@@ -1,7 +1,7 @@
 /* @file urlencode.cc
  * @brief URL encoding as described by RFC3986.
  */
-/* Copyright (C) 2011 Olly Betts
+/* Copyright (C) 2011,2014 Olly Betts
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to
@@ -32,13 +32,13 @@
 using namespace std;
 
 void
-url_encode(string & res, const char * p, size_t len)
+url_encode_(string & res, const char * p, size_t len, const char * safe)
 {
     while (len--) {
 	unsigned char ch = *p++;
 	if ((unsigned(ch) | 32u) - unsigned('a') <= unsigned('z' - 'a') ||
 	    unsigned(ch) - unsigned('0') <= unsigned('9' - '0') ||
-	    strchr("-._~", ch)) {
+	    strchr(safe, ch)) {
 	    // Unreserved by RFC3986.
 	    res += ch;
 	} else {
